# Textbox

./: .gitignore  .pre-commit-config.yaml  README.md  image_fit_paste.py  main.py  pyproject.toml  requirements.txt  text_fit_draw.py
config/: .settings.yaml.un~  character.yaml  settings.yaml  settings.yaml~
src/: __init__.py  app.py
src/config/: characters.py  loader.py  paths.py  settings.py  text_configs.py
src/hotkeys/: bindings.py
src/io/: clipboard.py  keys.py  window.py
src/services/: generator.py  paste_image.py  render_text.py
src/ui/: tui.py
src/utils/: image_paste.py  logging_setup.py  text_draw.py
